[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/lasers/laser.png" type="Texture" id=1]
[ext_resource path="res://laser/laser.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 30.0

[node name="Laser" type="Area2D" groups=[
"lasers",
]]
z_as_relative = false
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Explosion" type="CPUParticles2D" parent="."]
emitting = false
amount = 600
one_shot = true
explosiveness = 1.0
randomness = 0.72
lifetime_randomness = 0.63
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 96.78
initial_velocity_random = 1.0
damping = 9.67
damping_random = 1.0
scale_amount = 2.0
color = Color( 0.443137, 0.788235, 0.215686, 1 )

[node name="ExplosionTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Laser_body_entered"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
